--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "eslint": "5.16.0",
     "jest": "24.5.0",
     "metro-react-native-babel-preset": "0.53.1",
-    "react-test-renderer": "16.8.3"
+    "react-test-renderer": "16.8.3",
+    "redux-devtools-extension": "^2.13.8"
   },
   "jest": {
     "preset": "react-native"
